# PageToMD

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: render_fixtures.py
src/pagetomd/: __init__.py  __main__.py  cli.py  config.py  converter.py  crawler.py  exceptions.py  extractor.py  fetcher.py  logging.py  pipeline.py  postprocess.py  ssrf.py  writer.py
tests/: conftest.py
tests/fixtures/pages/: blog.html  code_heavy.html  cross_reference_links.html  docs.html  github_readme.html  news.html  panw_cross_refs.html  rtl_hebrew.html  spa_vue.html  tables.html
tests/integration/: __init__.py  conftest.py  test_crawl_e2e.py  test_determinism.py  test_e2e.py  test_e2e_playwright.py  test_packaging.py
tests/property/: __init__.py  test_postprocess_props.py  test_wide_tables_props.py  test_writer_props.py
tests/snapshot/: conftest.py  test_crawl_snapshots.py  test_pipeline_snapshots.py
tests/snapshot/__snapshots__/: test_crawl_snapshots.ambr  test_pipeline_snapshots.ambr
tests/unit/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_crawl_orchestrator.py  test_crawler.py  test_exceptions.py  test_extractor.py  test_fetcher.py  test_fetcher_edge_cases.py  test_fetcher_retry_after.py  test_logging.py  test_pipeline.py  test_pipeline_auto.py  test_playwright_fetcher.py  test_postprocess.py  test_ssrf.py  test_writer.py
