[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pagetomd"
dynamic = ["version"]
description = "Convert any webpage URL into clean, LLM-ready Markdown with frontmatter."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Gabriel Shekler", email = "gs202@users.noreply.github.com" }
]
keywords = [
    "markdown",
    "html-to-markdown",
    "web-scraping",
    "llm",
    "cli",
    "trafilatura",
    "pipx",
    "uvx",
    "frontmatter",
    "yaml",
    "playwright",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Internet :: WWW/HTTP",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.2",
    "trafilatura>=2.0,<3",
    "markdownify>=0.13,<1",
    "tenacity>=8.2",
    "typer>=0.12",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "syrupy>=4.6",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "respx>=0.21",
]

[project.scripts]
pagetomd = "pagetomd.cli:app"

[project.urls]
Homepage = "https://github.com/gs202/pagetomd"
Repository = "https://github.com/gs202/pagetomd"
Issues = "https://github.com/gs202/pagetomd/issues"
Changelog = "https://github.com/gs202/pagetomd/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pagetomd/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pagetomd"]

[tool.hatch.build.targets.sdist]
# Sdist intentionally excludes tests/, docs/design/, and scripts/ to keep the
# tarball lean. Downstream packagers can clone the repo for the full source.
include = [
    "src/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]

[tool.mypy]
strict = true
python_version = "3.13"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["trafilatura.*", "markdownify.*", "slugify.*", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests that spawn the real CLI as a subprocess against the local-loopback HTTP server (collected by default).",
    "playwright: tests that require the optional 'playwright' extra plus the chromium browser binary. Skipped automatically when those are unavailable.",
    "property: hypothesis-driven property-based tests covering invariants such as postprocess idempotence, NFC stability, and fenced-code-block preservation.",
    "packaging: release-prep tests that build the sdist+wheel, install into a throwaway venv, and verify the entry point. Collected by default but slower (~15-30s).",
]

[tool.coverage.run]
branch = true
source = ["src/pagetomd"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Total coverage must clear 85%. Per-module ≥90% on
# extractor/converter/writer/postprocess is enforced separately via the
# ``pytest_sessionfinish`` hook in ``tests/conftest.py``.
fail_under = 85
