[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pagetomd"
dynamic = ["version"]
description = "Convert any webpage URL into clean, LLM-ready Markdown with frontmatter."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BUSL-1.1" }
authors = [
  { name = "Gabriel Shekler", email = "gs202@users.noreply.github.com" }
]
keywords = [
    "markdown",
    "html-to-markdown",
    "web-scraping",
    "llm",
    "cli",
    "trafilatura",
    "pipx",
    "uvx",
    "frontmatter",
    "yaml",
    "playwright",
    "rag",
    "ai-agents",
    "llm-context",
    "context-window",
    "web-crawler",
    "agent-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "httpx[socks]>=0.28",
    "beautifulsoup4>=4.15",
    "lxml>=6.1",
    "trafilatura>=2.1",
    "markdownify>=1.2",
    "tenacity>=9.1",
    "typer>=0.26",
    "pydantic-settings>=2.14.2",
    "structlog>=26.1",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.60"]
dev = [
    "pytest>=9.1",
    "pytest-cov>=7.1",
    "pytest-xdist>=3.8",
    "pytest-asyncio>=1.4",
    "syrupy>=5.3.2",
    "hypothesis>=6.155.3",
    "ruff>=0.15.17",
    "mypy>=1.11,<3",
    "pre-commit>=4.6.0",
    "respx>=0.23.1",
]

[project.scripts]
pagetomd = "pagetomd.cli:app"

[project.urls]
Homepage = "https://github.com/gs202/PageToMD"
Repository = "https://github.com/gs202/PageToMD"
Issues = "https://github.com/gs202/PageToMD/issues"
Changelog = "https://github.com/gs202/PageToMD/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pagetomd/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pagetomd"]

[tool.hatch.build.targets.sdist]
# Sdist intentionally excludes tests/, docs/design/, and scripts/ to keep the
# tarball lean. Downstream packagers can clone the repo for the full source.
include = [
    "src/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["trafilatura.*", "markdownify.*", "slugify.*", "playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config -n auto --dist=loadscope"
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests with mocked dependencies (tests/unit/).",
    "integration: end-to-end tests that spawn the real CLI as a subprocess against the local-loopback HTTP server (collected by default).",
    "playwright: tests that require the optional 'playwright' extra plus the chromium browser binary. Skipped automatically when those are unavailable.",
    "property: hypothesis-driven property-based tests covering invariants such as postprocess idempotence, NFC stability, and fenced-code-block preservation.",
    "snapshot: syrupy-based pipeline round-trip snapshot tests (tests/snapshot/).",
    "packaging: release-prep tests that build the sdist+wheel, install into a throwaway venv, and verify the entry point. Collected by default but slower (~15-30s).",
]

[tool.coverage.run]
branch = true
source = ["src/pagetomd"]
# Store relative paths so coverage data from parallel CI jobs can be
# combined without path-mapping quirks.
relative_files = true

[tool.coverage.paths]
source = [
    "src/pagetomd",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Total coverage must clear 85%. Per-module ≥90% on
# extractor/converter/writer/postprocess is enforced separately via the
# ``pytest_sessionfinish`` hook in ``tests/conftest.py``.
# fail_under is intentionally NOT set here — the global 85% threshold
# is enforced only in the CI ``coverage`` job after combining data from
# all parallel test runs.  Setting it here would trip on individual
# ``pytest --cov`` invocations that run only a subset of the suite.
